--- a/index.html
+++ b/index.html
@@ -106,16 +106,119 @@
                 <li>\(p=0\) - the event will not occur</li>
                 <li>\(p=1\) - the event will occur</li>
             </ul>
+        </section>
+        <section
+                data-transition="fade-in">
+            <h2>Conditional Probability</h2>
             <ul>
-                <li class="fragment">Bayesian: probability is deduced from prior knowledge</li>
-                <li class="fragment">Frequentist: probability obtained from experimentation</li>
+                <li>
+                    <strong>Conditional Probability</strong> \(P(A|B)\) - the probability of event A occurring, given B has occurred
+                    <span class="math-formula">\(P(A|B) = \frac{P(A \cap B)}{P(B)}\)</span>
+                </li>
+                <li>
+                    <strong>Multiplication Rule</strong>
+                    <span class="math-formula">\(P(A \cap B) = P(A|B) * P(B)\)</span>
+                </li>
+                <li>
+                    <p><strong>Mutually Exclusive</strong></p>
+                    <span class="math-formula">\(P(A \cap B) = P(A)\)</span>
+                </li>
+            </ul>
+            <aside class="notes">
+                <ul>
+                    <li>upside-down U is intersection</li>
+                </ul>
+            </aside>
+        </section>
+        <section
+                data-transition="fade-in">
+            <h2>Conditional Probability</h2>
+            <p>What is the probability that you draw from a pack of cards 2 diamonds in a row?</p>
+            <span class="math-formula fragment">\(P(D_2 \cap D_1)\)</span>
+            <span class="math-formula fragment">= \(P(D_2|D_1) * P(D_1)\)</span>
+            <div class="fragment">
+                <p class="math-formula">\(P(D_1) = \frac{13}{52} = \frac{1}{4}\)</p>
+                <p class="math-formula">\(P(D_2|D_1) = \frac{12}{51}\)</p>
+            </div>
+            <p class="math-formula fragment">\(P(D_2 \cap D_1) = \frac{1}{4} * \frac{12}{51} = \frac{3}{51}\)</p>
+
+            <aside class="notes">
+                <ul>
+                    <li>Ahem, What is the probability that the second card drawn from a pack of cards is a diamond <span class="math-formula fragment">\(P(D_2 \cap D_1)\)</span>, given that the first card drawn was a diamond P(D1)?</li>
+                    <li>Probability of drawing the first diamond is 13/52</li>
+                    <li>Since there is 1 less card, the probability of drawing the second diamond given that a diamond has been drawn is 12/51</li>
+                </ul>
+            </aside>
+        </section>
+        <section
+                data-transition="fade-in">
+            <h2>Sally Clark</h2>
+            <p></p>
+            <ul>
+                <li><em>What is the probability that a mother's first 2 babies dies of SIDS?</em></li>
+                <li><em>Are these events dependent or independent?</em></li>
+                <li class="fragment">Given that a mother's first baby died of SIDS, what is the probability that her second baby will also die of SIDS? \(P(B_2|B_1)\)</li>
+            </ul>
+            <ul class="fragment">
+                <li>Expert testimony from Dr. Roy Meadow: \(P(B)^2 = (1/8543)^2 \approx 1/73000000\)</li>
+                <li>Convicted in Nov. 1999 on this evidence</li>
+            </ul>
+            <aside data-markdown class="notes">
+                * What is the probability that a mother's first 2 babies dies of SIDS? Are these events dependent or independent?
+                * Given that a mother's first baby died of SIDS, what is the probability that her second baby will also die of SIDS?
+                * Professor Sir Roy Meadow incorrectly concluded that these were 2 independent events, and famously said it was a "1 in 73 million" chance.
+                * This false statistic lead to her false conviction in November 1999.
+                * Probability and statistics got distorted - people understood "1 in 73 million" to be a measure of her innocence.
+                * Also the pathologist hid knowledge that one of the babies had a staph infection
+                * She was release on January 2003, but died in March 2007 from alcohol poisoning.
+            </aside>
+        </section>
+        <section
+                data-transition="fade-in">
+            <h2>Bayes' Theorem</h2>
+            <div class="math-formula">$$P(B|A) = \frac{P(A|B)P(B)}{P(A)}$$</div>
+            <div class="fragment">
+                <div class="math-formula">$$P(B|A)P(A) = P(A \cap B) = P(A|B)P(B)$$</div>
+                <div class="math-formula">$$P(B|A)P(A) = P(A|B)P(B)$$</div>
+            </div>
+        </section>
+        <section
+                data-markdown
+                data-transition="fade-in">
+            ## Statistics
+
+            * What is **Statistic**? Information that can be computed from data
+              * **Pure Statistics** - a single value computed from data, such as a sample average
+              * **Interval Statistics** - an interval [*a, b*] computed from data.
+        </section>
+        <section
+                data-transition="fade-in">
+            <h2>Statistics vs. Probability</h2>
+            <ul>
+                <li><strong>Statistic</strong>
+                    <ul>
+                        <li><em>&mu;</em> of 100 dice rolls</li>
+                        <li>Number times rolling a 5</li>
+                    </ul>
+                </li>
+                <li><strong>Probability</strong>
+                    <ul>
+                        <li>Likelihood of rolling a 4</li>
+                        <li>Likelihood of rolling a 6 three times</li>
+                    </ul>
+                </li>
             </ul>
         </section>
         <section
                 data-transition="fade-in">
-            <h2>Statistics</h2>
+            <h2>What's the point?</h2>
             <ul>
-                <li>What is Statistic? Information that can be computed from data</em></li>
+                <li>If I flip a coin 10 times and it lands heads 7 times, is the coin rigged? \(P(X = 7)\)</li>
+                <li class="fragment">10% of contributors who debrief a session will create an annotation.
+                    <ul>
+                        <li>A change is made to the application, and 8 of the next 50 debriefing contributors create annotations.</li>
+                        <li>Did the change have an effect?</li>
+                    </ul>
             </ul>
         </section>
         <section
@@ -124,6 +227,21 @@
             <ul>
                 <li class="fragment">Bayesian: probability is deduced from prior knowledge</li>
                 <li class="fragment">Frequentist: probability obtained from experimentation</li>
+            </ul>
+        </section>
+        <section
+                data-transition="fade-in"
+                data-background-image="custom/media/xkcd-1132.png"
+                data-background-repeat="no-repeat"
+                data-background-size="contain"
+                style="margin: 10rem">
+        </section>
+        <section
+                data-transition="fade-in">
+            <h1>Bayesian Statistics</h1>
+            <ul>
+                <li>Conclusions are subjective and can be updated</li>
+                <li>Use prior knowledge</li>
             </ul>
         </section>
     </div>
